fix pip reqs for Pip 21.2.1

--- a/environment.yml
+++ b/environment.yml
@@ -8,5 +8,6 @@ dependencies:
   - scikit-learn
   - tensorflow
   - keras
+  - pytest
   - pip:
-      - -r file:requirements.txt
+      - -r requirements.txt
